[gd_scene load_steps=8 format=3 uid="uid://torjvgi6u5u5"]

[ext_resource type="Theme" uid="uid://hsneaacuslws" path="res://default.tres" id="1_4t3fd"]
[ext_resource type="Script" path="res://scripts/customization.gd" id="1_7v8y6"]
[ext_resource type="PackedScene" uid="uid://dlb1e0yeqswu5" path="res://scenes/ui_remnant.tscn" id="2_t5xqt"]
[ext_resource type="Texture2D" uid="uid://ckusqutsb527x" path="res://assets/shield.png" id="4_thp8u"]
[ext_resource type="Texture2D" uid="uid://bkmyl02m3unvw" path="res://assets/armor/armor_0.png" id="5_7gysg"]
[ext_resource type="Texture2D" uid="uid://c2v2ypf0fr6qx" path="res://assets/crown/crown1.png" id="5_apwq4"]
[ext_resource type="Texture2D" uid="uid://crxcadoie6x15" path="res://assets/flightboots/flightboots0.png" id="5_cdgdk"]

[node name="Customization" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_7v8y6")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -230.0
offset_right = 352.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.454524, 0.454524, 0.454524, 1)

[node name="EquipmentLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -331.0
offset_top = -217.0
offset_right = -96.0
offset_bottom = -150.0
theme = ExtResource("1_4t3fd")
text = "Remnants"

[node name="VisionMat" parent="." instance=ExtResource("2_t5xqt")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 206.0
offset_top = 109.0
offset_right = 206.0
offset_bottom = 109.0
title = "Vision"
description = "One of the first things your
creator's given you."

[node name="ForwardMat" parent="." instance=ExtResource("2_t5xqt")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -6.0
offset_top = 107.0
offset_right = -6.0
offset_bottom = 107.0
title = "Variation"
description = "Allows you to be entertaining AND serious.
Removing this will restore your purpose."

[node name="ShieldMat" parent="." instance=ExtResource("2_t5xqt")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -214.0
offset_top = 111.0
offset_right = -214.0
offset_bottom = 111.0
title = "Shield"
description = "You made this.
It protects you from the world overrun by crooks."
icon = ExtResource("4_thp8u")

[node name="WingedBootsMat" parent="." instance=ExtResource("2_t5xqt")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 204.0
offset_top = -68.0
offset_right = 204.0
offset_bottom = -68.0
title = "Winged Boots"
description = "Your angelic prowess in boot form.
Gives you unprecedented speed."
icon = ExtResource("5_cdgdk")

[node name="CFRBMat" parent="." instance=ExtResource("2_t5xqt")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -7.0
offset_top = -69.0
offset_right = -7.0
offset_bottom = -69.0
title = "Crazy Fucking Robot Body"
description = "A body made of the strongest synthetic material.
Gives you lots of HP."
icon = ExtResource("5_7gysg")

[node name="CrownMat" parent="." instance=ExtResource("2_t5xqt")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -214.0
offset_top = -68.0
offset_right = -214.0
offset_bottom = -68.0
title = "Crown"
description = "Your status as royalty.
Makes you practically invincible.

Taking this off mortalizes you."
icon = ExtResource("5_apwq4")
disabled = false

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = -47.0
offset_top = 197.0
offset_right = 85.0
offset_bottom = 272.0
scale = Vector2(0.60961, 0.60961)
theme = ExtResource("1_4t3fd")
text = "Close
"

[connection signal="on_selected" from="VisionMat" to="." method="_on_vision_mat_on_selected"]
[connection signal="on_selected" from="ForwardMat" to="." method="_on_forward_mat_on_selected"]
[connection signal="on_selected" from="ShieldMat" to="." method="_on_shield_mat_on_selected"]
[connection signal="on_selected" from="WingedBootsMat" to="." method="_on_winged_boots_mat_on_selected"]
[connection signal="on_selected" from="CFRBMat" to="." method="_on_cfrb_mat_on_selected"]
[connection signal="on_selected" from="CrownMat" to="." method="_on_crown_mat_on_selected"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
